# CLN-MCP

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  grpc.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/client/: config.rs  node.rs
src/docs/: bkpr-channelsapy.md  bkpr-listaccountevents.md  bkpr-listbalances.md  bkpr-listincome.md  checkmessage.md  decode.md  decodepay.md  feerates.md  getinfo.md  getlog.md  getroute.md  listaddresses.md  listchannels.md  listclosedchannels.md  listconfigs.md  listdatastore.md  listforwards.md  listfunds.md  listhtlcs.md  listinvoicerequests.md  listinvoices.md  listnodes.md  listoffers.md  listpays.md  listpeerchannels.md  listpeers.md  listsendpays.md
src/tests/: integration_test.rs
src/utils/: tls.rs
